mkdir 구현
- 기존 커맨드와 같은 방식으로 구현했고, dir 이름도 지정해줘야하지만
  디렉토리가 생성되는 걸 확인